css only menu toggle fix for safari Tested on safari (both moblie and desktop) and chrome

--- a/src/main.scss
+++ b/src/main.scss
@@ -2,7 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
 /* roboto-regular - latin */
 @font-face {
   font-family: "Roboto";
@@ -43,7 +42,8 @@
       url("/fonts/roboto-v30-latin-900.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
-strong, b{
+strong,
+b {
   font-weight: bold !important;
 }
 
@@ -174,13 +174,41 @@ ul {
   top: 6rem;
 }
 
+.overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.3);
+    z-index: 1;
+}
+
+
 .sideMenuWrapper {
   > .btn:not(:focus):not(:focus-within)
     + .sideMenu:not(:focus):not(:focus-within) {
     right: -100%;
   }
 
+  #menuToggle:checked ~ .sideMenu {
+    right: 0;
+}
+  #menuToggle:not(:checked) ~ .sideMenu {
+    right: -100%;
+  }
+
+  #menuToggle:checked ~ .overlay {
+    display: block;
+}
+
+  #overlayToggle:checked ~ .sideMenu {
+    right: -100%;
+}
+
   .sideMenu {
+    right: -100%;
     position: fixed;
     height: 100vh;
     width: 20rem;
@@ -189,6 +217,7 @@ ul {
     right: 0;
     background-color: #fff;
     transition: right 500ms ease;
+    z-index: 2;
 
     .dropdown {
       display: block;
